--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playground-miner-frontend",
+  "name": "playground-frontend",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -19,4 +19,3 @@
     "vite": "^5.0.0"
   }
 }
-
