UTXO UX overhaul:\n- Visualize change UTXO; remove progress steps and tx ID from viz\n- Reorder layout: simulator on top; move full wallet status into simulator panel\n- New UTXO green/no-scale; selected UTXO orange/no-scale; keep states after sim\n- Add recent used UTXOs section; clear on reset\n- Default recipient set to first wallet after each sim\n- Show UTXO created time (or ‘알 수 없음’)\n- Remove ‘마지막 거래 성공’ banner and preview card\n- Display all BTC amounts as integers\n- Update .gitignore to ignore SQLite -wal/-shm

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,11 @@
 
 # Environment files
 .env
-.env.*
-*.env
+.env.local
+.env.*.local
+# Keep development and production env files in repo
+# .env.development
+# .env.production
 
 # Python
 __pycache__/
@@ -33,6 +36,9 @@ staticfiles/
 media/
 db.sqlite3
 db.sqlite3-journal
+# SQLite sidecar files
+db.sqlite3-shm
+db.sqlite3-wal
 
 # Tests / Coverage / Type checking
 .coverage
@@ -55,4 +61,3 @@ pnpm-debug.log*
 # Logs
 logs/
 *.log
-
