--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -7,7 +7,32 @@
   "background_color": "#f9fafb",
   "theme_color": "#111827",
   "orientation": "portrait",
-  "icons": [],
+  "icons": [
+    {
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
   "categories": ["education", "finance", "utilities"],
   "lang": "ko",
   "scope": "/",
