--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "비트코인 놀이터",
-  "short_name": "BTC 놀이터",
+  "name": "한입 놀이터",
+  "short_name": "한입 놀이터",
   "description": "비트코인 학습 및 채굴 시뮬레이션 플랫폼",
   "start_url": "/",
   "display": "browser",
